2002-05-22 18:18 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-calculate-indent-with-offset): Really fixed the
	error message (I'd forgotten to pass the value of `offset' to
	`error' so that the format string would have the corrent
	argument).

2002-05-22 17:52 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-calculate-indent-with-offset): Fixed error
	message.

2002-05-22 16:58 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-line): Modified to use
	`delete-horizontal-space'.

2002-05-22 14:55 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-font-lock-statements): Added various OO oriented
	statements. Added DEFAULT.

2002-05-22 14:37 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-variable-name-face): Added.
	(xbase-constant-face): Added.
	(xbase-mode): Reenabled font locking for #define names. Reenabled
	font locking for .T., .F. and NIL. Also included SELF and SUPER.

2002-05-22 13:48 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode-syntax-table): Added support for "&&"
	comments.

2002-05-22 13:37 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode-syntax-table): Changed to a `defvar' (was a
	`defconst').

2002-05-22 13:36 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode-syntax-table): Set "_" to word class.
	Added support for "/* .. */" and "//" comments.

2002-05-22 13:31 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode-syntax-table): Set "'" to be a string
	delimiter.

2002-05-22 13:30 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-string-face): Removed.
	(xbase-mode): Removed string entry from font lock rules, it's not
	required.

2002-05-22 12:49 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-function-name-face): Added.
	(xbase-mode): Reenabled highlighting of (defun) function names.

2002-05-22 12:47 UTC+0100  Dave Pearson  <davep@davep.org>
