@@ -1,3 +1,7 @@
+2002-05-23 09:41 UTC+0100  Dave Pearson  <davep@davep.org>
+
+	* xbase.el: Added documentation strings to various functions.
+
 2002-05-22 18:18 UTC+0100  Dave Pearson  <davep@davep.org>
 
 	* xbase.el (xbase-calculate-indent-with-offset): Really fixed the
